Fix header page gap

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -85,7 +85,7 @@ header {
   align-items: flex-end;
   line-height: 1;
   border-bottom: 0.2rem solid @black;
-  margin-bottom: 5rem;
+  margin-bottom: var(--content-spacing);
 }
 
 h1 {
